examples/errors/parsing/booleans-no-then.cn
main : () [impure] =
  if true () else ()
